--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <div class="key">
+            a
+            <small>event.key</small>
+        </div>
+        <div class="key">
+            65
+            <small>event.keyCode</small>
+        </div>
+        <div class="key">
+            KeyA
+            <small>event.code</small>
+        </div>
+        <div class="key">
+            Press any key
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
